--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -14,10 +14,9 @@
 
   <main>
     <div class="container">
-      <h1 class="main-title">
-        <span class="main-title-gradient">Welcome</span> to Gallery
-      </h1>
+
       <load src="./partials/back-link.html" />
+      <ul class="gallery"></ul>
     </div>
   </main>
   <load src="./partials/footer.html" />
